// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders correctly prominence default 1`] = `
<DocumentFragment>
  .cache-13mawr1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-13mawr1 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly prominence strong 1`] = `
<DocumentFragment>
  .cache-1uu06zg {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #151a2d;
  background: #f6f6f8;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-1uu06zg egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly size large 1`] = `
<DocumentFragment>
  .cache-cvos70 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 32px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-1b0uuur {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 14px;
}

.cache-1b0uuur.cache-1b0uuur {
  font-size: 14px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-cvos70 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-1b0uuur"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly size medium 1`] = `
<DocumentFragment>
  .cache-13mawr1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-13mawr1 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly size small 1`] = `
<DocumentFragment>
  .cache-on8h10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 8px;
  gap: 4px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 16px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-190v7s9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 10px;
}

.cache-190v7s9.cache-190v7s9 {
  font-size: 10px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-on8h10 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-190v7s9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant danger 1`] = `
<DocumentFragment>
  .cache-18e1p8k {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #a6102d;
  background: #ffe1e7;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    aria-label="danger"
    as="span"
    class="cache-18e1p8k egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant info 1`] = `
<DocumentFragment>
  .cache-1lbrtex {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #1a4dbf;
  background: #e1ebff;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    aria-label="info"
    as="span"
    class="cache-1lbrtex egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant neutral 1`] = `
<DocumentFragment>
  .cache-13mawr1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-13mawr1 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant primary 1`] = `
<DocumentFragment>
  .cache-1e2dqqa {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #390171;
  background: #eeeeff;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-1e2dqqa egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant success 1`] = `
<DocumentFragment>
  .cache-hb6ra1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #149a7b;
  background: #eafffb;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    aria-label="success"
    as="span"
    class="cache-hb6ra1 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant warning 1`] = `
<DocumentFragment>
  .cache-12bz811 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #cc4e18;
  background: #ffefe6;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    aria-label="warning"
    as="span"
    class="cache-12bz811 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-1rx474n {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #f6f6f8;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-1rx474n egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-13mawr1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-13mawr1 egvl2gp0"
    role="status"
  >
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly with icon 1`] = `
<DocumentFragment>
  .cache-13mawr1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #ffffff;
}

.cache-vjjd4q {
  fill: currentColor;
  height: 12px;
  width: 12px;
  min-width: 12px;
  min-height: 12px;
}

.cache-vjjd4q.cache-vjjd4q {
  vertical-align: middle;
}

.cache-gxqlf9 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: inherit;
  text-transform: uppercase;
  font-size: 12px;
}

.cache-gxqlf9.cache-gxqlf9 {
  font-size: 12px;
  font-weight: 500;
}

<div
    as="span"
    class="cache-13mawr1 egvl2gp0"
    role="status"
  >
    <svg
      class="sc-ui-icon etwatq50 cache-vjjd4q"
      viewBox="0 0 24 24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
    <div
      class="egvl2gp1 e1g1zfwd0 cache-gxqlf9"
    >
      Sample badge
    </div>
  </div>
</DocumentFragment>
`;
